adding different pages

--- a/paconsse/default/templates/index.html
+++ b/paconsse/default/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} {% block content %}
-<!-- prettier-ignore -->
 
-Hello World !
+<div class="flex flex-col m-4 gap-1">
+	<h1 class="text-5xl font-bold">Développeur Python/Web</h1>
+	<p class="text-2xl">Site en cours de conception</p>
+</div>
 
-<!-- prettier-ignore -->
 {%endblock %}
