--- a/paconsse/default/templates/components.html
+++ b/paconsse/default/templates/components.html
@@ -1,20 +1,25 @@
 {% macro navBar(currentPage) -%}
 
 <div class="bg-gray-700 flex items-center justify-between px-7">
-	<span class="text-5xl font-bold w-auto hover:scale-110 cursor-pointer transition-all ease-in-out">Paconsse</span>
+	<a
+		href="{{url_for('default.index')}}"
+		class="text-5xl font-bold w-auto hover:scale-110 cursor-pointer transition-all ease-in-out"
+	>
+		Paconsse
+	</a>
 	<div class="text-2xl flex items-center justify-end w-full">
-		<div class="flex items-center justify-around w-1/2">
-			{{ link("Home", "https://google.com") }} {{ link("About", "https://github.com") }} {{ link("Contact",
-			"https://twitter.com") }}
+		<div class="flex items-center justify-around w-4/5">
+			{{ link("À propos", url_for('default.about')) }} {{ link("Blog", url_for('blog.index')) }} {{
+			link("Projets", url_for('default.book')) }} {{ link("Big Bucks Battle", "https://example.com") }}
 		</div>
 	</div>
 </div>
 {%- endmacro %} {% macro link(text, link) -%}
 <a
 	href="{{link}}"
-	class="flex flex-col items-center justify-center hover:bg-gray-800 transition-all duration-300 cursor-pointer group w-full h-full py-7"
+	class="flex flex-col items-center justify-center hover:bg-gray-800 transition-all duration-300 cursor-pointer group w-full h-full py-7 px-3"
 >
-	<div>
+	<div class="group-hover:scale-125 transition-all duration-300 ease-in-out delay-150">
 		<span class="text-2xl font-bold">{{ text }}</span>
 		<div class="bg-white h-1 w-0 group-hover:w-full transition-all ease-in-out"></div>
 	</div>
